seedbox/sonarr/deployment.yml
# deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: seedbox
spec:
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      containers:
        - name: sonarr
          image: lscr.io/linuxserver/sonarr:4.0.8.1874-ls250 # {"$imagepolicy": "flux-system:sonarr"}
          ports:
            - containerPort: 8989
              name: http
          volumeMounts:
            - mountPath: /config
              name: fast-nfs
            - mountPath: /slow-nfs
              name: slow-nfs
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              cpu: 300m
              memory: 512Mi
      volumes:
        - name: fast-nfs
          persistentVolumeClaim:
            claimName: sonarr
        - name: slow-nfs
          persistentVolumeClaim:
            claimName: slow-nfs
