seedbox/sonarr/http-route.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sonarr
  namespace: seedbox
spec:
  parentRefs:
    - name: traefik
      namespace: traefik 
      sectionName: internal-https
  rules:
    - backendRefs:
        - name: sonarr
          port: 80
